--- a/App.config
+++ b/App.config
@@ -9,7 +9,11 @@
     <add name="user" connectionString=""/>
     <add name="password" connectionString=""/>
     <add name="subscribe" connectionString=""/>
+    <add name="subscribe1" connectionString=""/>
+    <add name="subscribe2" connectionString=""/>
     <add name="publish" connectionString=""/>
     <add name="lastMsg" connectionString=""/>
+    <add name="publish1" connectionString=""/>
+    <add name="lastMsg1" connectionString=""/>
   </connectionStrings >
 </configuration>
